--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -32,6 +32,8 @@ jobs:
       -
         name: Install Dependencies
         run: npm ci --legacy-peer-deps
+        env:
+          CI: false
       -
         name: Build
         run: npm run build --if-present
