--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -70,6 +70,13 @@ jobs:
     needs: build
     steps:
       -
+        name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+      -
         name: Code Deploy
         run: >
           aws deploy create-deployment
