--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,8 +3,8 @@ services:
   frontend: 
     build: 
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: anam-earth-fe-dev
+      dockerfile: Dockerfile.prod
+    container_name: anam-earth-fe-prod
     ports: 
       - "3000:3000"
     volumes:
