--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   S3_BUCKET_NAME: anam-earth
-  S3_KEY: frontend/build.zip
+  S3_KEY: frontend.zip
   CD_APPLICATION_NAME: anam-earth-deploy
 
 
@@ -37,10 +37,9 @@ jobs:
         run: npm run build --if-present
         env:
           CI: false
-      -
-        name: Copy appspec.yml to build directory
-        run: cp appspec.yml build/appspec.yml
-         
+#      -
+#        name: Copy appspec.yml to build directory
+#        run: cp appspec.yml build/appspec.yml
 #      -
 #        name: Make zip file
 #        run: zip -r ./${{ S3_KEY }} .
@@ -59,11 +58,10 @@ jobs:
           --application-name ${{ env.CD_APPLICATION_NAME }}
           --description "This is a revision for the application ${{ env.CD_APPLICATION_NAME }}"
           --s3-location s3://${{ env.S3_BUCKET_NAME }}/${{ env.S3_KEY }}
-          --source ./build
+          --source .
 #        env:
 #          cd-application-name: ${{ env.CD_APPLICATION_NAME }}
 #        run: aws s3 cp --region ap-northeast-2 ./build-fe.zip s3://${{ env.S3_BUCKET_NAME }}/frontend/build.zip
-#        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip
 
   deploy:
     runs-on: ubuntu-latest
