--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-map-gl": "^7.0.18",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "underscore": "^1.13.4",
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
